# ai-summarizer-telegram-bot

./: .codacy.yml  .coverage 2  .deepsource.toml  .dockerignore  .env.example  .envrc  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  AGENTS.md  Dockerfile  NOTICE  README.md  alembic.ini  compose.yaml  config.py  database.py  db.py  download.py  entrypoint.sh  main.py  models.py  pproxy.Dockerfile  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  summary.py  tinyproxy.Dockerfile  transcription.py  utils.py  worker.Dockerfile
.agents/skills/prompt-engineer/references/: evaluation-frameworks.md
.claude/: settings.json
.claude/commands/: handoff.md  process-doc.md  status.md
.codex/environments/: environment.toml
.github/: dependabot.yml  renovate.json
.github/workflows/: black.yml  ci.yml  codecov.yml  lint.yml  linting.yml  opencommit.yml  osv-scanner.yml  porter_app_ai-summarizer-telegram-bot_2514.yml  scorecard.yml  sentry_release.yml  typechecking.yml
cron/: cron.py  reset.py
docs/context/: agent-templates.md  architecture.md  archive-rules.md  git-guide.md  processing-protocol.md  project-structure.md  style-guide.md  subagent-rules.md  tech-stack.md  tooling-guide.md  uv-guide.md
migrations/: README.md  env.py
migrations/versions/: 0797d20d7869_.py  07c9737cd7bf_.py  0afa420d867e_.py  10c9ae0e381a_add_yt_transcript_source.py  198b7ed11f80_.py  26c5df468f24_.py  296e8837ca37_.py  30a3e37bbf5f_.py  35e967a89382_.py  37d47c20352c_add_daily_limit_to_users.py  38ba859a4715_.py  437d9635461c_.py  4674e2a53a5c_add_thinking_level_to_users.py  6bb4ed473ffd_drop_legacy_gemini_models.py  75c166144434_drop_transcription_from_users.py  7d6c441557e8_.py  96da01ef8da4_default_gemini_3_5_flash_lite_and_high_.py  a768d66b5971_drop_yt_transcription_from_users.py  ac58b3f071ef_drop_yt_transcript_source_from_users.py  af77dea001da_.py  c1f28a6c8650_.py  c27e3620d906_default_gemini_3_5_flash.py  dea241345bca_.py  e1d54080707f_.py  ed5162e4188e_.py
scripts/: cron.py  db.py
src/: config.py  database.py  domain.py  download.py  exceptions.py  handlers.py  main.py  models.py  parse.py  parsing.py  prompts.py  services.py  summary.py  transcription.py  translate.py  utils.py  worker.py
templates/: claude-templates.md
test/: conftest.py  test_commands.py  test_database.py  test_download.py  test_handlers.py  test_services.py  test_summary.py  test_transcription.py  test_utils.py
tests/: __init__.py  conftest.py  test_commands.py  test_config.py  test_database.py  test_download.py  test_handlers.py  test_parsing.py  test_services.py  test_state.py  test_summary.py  test_transcription.py  test_utils.py
tinyproxy/: tinyproxy.conf
