[tool.poetry]
name = "ai-summarizer-telegram-bot"
version = "0.4.0"
description = "Bot to summarize video from youtube.com and podcasts from castro.fm"
authors = []
license = "Unlicense license"
readme = "README.md"
package-mode = false
repository = "https://github.com/vasiliadi/ai-summarizer-telegram-bot"

[tool.poetry.dependencies]
python = "~3.12"
google-generativeai = "^0.8.3"
requests = {extras = ["socks"], version = "^2.32.3"}
yt-dlp = {extras = ["default"], version = "^2024.11.18"}
beautifulsoup4 = "^4.12.3"
pytelegrambotapi = "^4.24.0"
replicate = "^1.0.3"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
telegramify-markdown = "^0.1.17"
sentry-sdk = "^2.19.0"
tenacity = "^9.0.0"
trafilatura = "^2.0.0"
rush = {extras = ["redis"], version = "^2021.4.0"}
coloredlogs = "^15.0.1"
youtube-transcript-api = "^0.6.3"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
alembic = "^1.14.0"
black = "^24.10.0"
modal = "^0.67.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
disallow_untyped_defs = true
python_version = "3.12"
exclude = ["temp.*", "migrations.*", "cron.*"]

[tool.pylint]
disable = ["C0114", "C0115", "C0116", "C0301"]
ignore = ["temp", "migrations", "cron",]

[tool.isort]
py_version = 312
skip_glob = ["temp/*", "migrations/*"]
multi_line_output = 3
include_trailing_comma = true
line_length = 88

[tool.ruff]
extend-exclude = ["temp", "migrations"]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",     # pycodestyle
  "F",     # Pyflakes
  "B",     # flake8-bugbear
  "I",     # isort
  "W",     # pycodestyle
  "SIM",   # flake8-simplify
  "UP",    # pyupgrade
  "LOG",   # flake8-logging
  "G",     # flake8-logging-format
  "PT",    # flake8-pytest-style
  "S",     # flake8-bandit
  "DTZ",   # flake8-datetimez
  "Q",     # flake8-quotes
  "RET",   # flake8-return
  "TID",   # flake8-tidy-imports
  "PTH",   # flake8-use-pathlib
  "PERF",  # Perflint
  "FURB",  # refurb
  "RUF",   # Ruff-specific rules
  "C90",   # mccabe
  "N",     # pep8-naming
  "A",     # flake8-builtins
  "COM",   # flake8-commas
  "CPY",   # flake8-copyright
  "C4",    # flake8-comprehensions
  "ICN",   # flake8-import-conventions
  "T20",   # flake8-print
  "RSE",   # flake8-raise
  "TCH",   # flake8-type-checking
  "ARG",   # flake8-unused-arguments
  "FIX",   # flake8-fixme
  "ERA",   # eradicate
  "PL",    # Pylint
  "FLY",   # flynt
  "D",     # pydocstyle
  "ANN",   # flake8-annotations
  "ASYNC", # flake8-async
  "T10",   # flake8-debugger
  "EM",    # flake8-errmsg
  "EXE",   # flake8-executable
  "FA",    # flake8-future-annotations
  "ISC",   # flake8-implicit-str-concat
  "INP",   # flake8-no-pep420
  "PIE",   # flake8-pie
  "PYI",   # flake8-pyi
  "RSE",   # flake8-raise
  "SLF",   # flake8-self
  "SLOT",  # flake8-slots
  "INT",   # flake8-gettext
  "PGH",   # pygrep-hooks
  "DOC",   # pydoclint
]
ignore = ["S603", "S607", "D100", "D401"]
exclude = ["cron"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
