[project]
name = "ai-summarizer-telegram-bot"
version = "0.9.3"
description = "Bot to summarize video from youtube.com and podcasts from castro.fm"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "google-genai>=1.25.0",
    "psycopg2-binary>=2.9.10",
    "pytelegrambotapi>=4.27.0",
    "replicate>=1.0.7",
    "requests[socks]>=2.32.4",
    "rush[redis]>=2021.4.0",
    "sentry-sdk>=2.33.0",
    "sqlalchemy>=2.0.41",
    "telegramify-markdown>=1.0.0",
    "tenacity>=9.1.3",
    "youtube-transcript-api>=1.1.1",
    "yt-dlp[default]>=2025.6.30",
]

[dependency-groups]
dev = [
    "alembic>=1.16.4",
    "black>=25.1.0",
    "modal>=1.0.5",
    "python-dotenv>=1.1.1",
    "yt-dlp[deno]>=2026.1.29",
]
test = [
    "coverage>=7.13.4",
    "fakeredis>=2.34.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pytest-cov>=6.0.0",
]

[tool.uv]
default-groups = ["dev", "test"]

[tool.ruff]
extend-exclude = ["temp", "migrations", "tests"]
line-length = 88
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle
    "F",     # Pyflakes
    "B",     # flake8-bugbear
    "I",     # isort
    "W",     # pycodestyle
    "SIM",   # flake8-simplify
    "UP",    # pyupgrade
    "LOG",   # flake8-logging
    "G",     # flake8-logging-format
    "PT",    # flake8-pytest-style
    "S",     # flake8-bandit
    "DTZ",   # flake8-datetimez
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "TID",   # flake8-tidy-imports
    "PTH",   # flake8-use-pathlib
    "PERF",  # Perflint
    "FURB",  # refurb
    "RUF",   # Ruff-specific rules
    "C90",   # mccabe
    "N",     # pep8-naming
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "CPY",   # flake8-copyright
    "C4",    # flake8-comprehensions
    "ICN",   # flake8-import-conventions
    "T20",   # flake8-print
    "RSE",   # flake8-raise
    "TC",   # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "FIX",   # flake8-fixme
    "ERA",   # eradicate
    "PL",    # Pylint
    "FLY",   # flynt
    "D",     # pydocstyle
    "ANN",   # flake8-annotations
    # "ASYNC", # flake8-async — not used
    "T10",   # flake8-debugger
    "EM",    # flake8-errmsg
    "EXE",   # flake8-executable
    "FA",    # flake8-future-annotations
    "ISC",   # flake8-implicit-str-concat
    "INP",   # flake8-no-pep420
    "PIE",   # flake8-pie
    "PYI",   # flake8-pyi
    "SLF",   # flake8-self
    "SLOT",  # flake8-slots
    "INT",   # flake8-gettext
    "PGH",   # pygrep-hooks
    "DOC",   # pydoclint
    # "FAST",  # FastAPI — not used
    "YTT",   # flake8-2020
    "BLE",   # flake8-blind-except
    "FBT",   # flake8-boolean-trap
    # "DJ",    # flake8-django — not used
    "TD",    # flake8-todos
    # "NPY",   # NumPy-specific rules — not used
    # "PD",    # pandas-vet — not used
    "TRY",   # tryceratops
]
ignore = ["S603", "S607", "D100", "D401", "PLR0913"]
exclude = ["scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pyrefly]
project-includes = ["**/*.py*", "**/*.ipynb"]
project-excludes = ["tests/**"]

[tool.ty.src]
exclude = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "migrations/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
ai-summarizer-telegram-bot = { path = ".", editable = true }
deno = ">=2.7.12"

[tool.pixi.environments]
default = { solve-group = "default" }
# default = { features = ["dev", "test"], solve-group = "default" }
# prod = { features = [], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
test = { features = ["test", "dev"], solve-group = "default" }

[tool.pixi.tasks]
prod = "python src/main.py"

[tool.pixi.feature.dev.tasks]
start = "python src/main.py"
db-upgrade = "alembic upgrade head"
db-migrate = "alembic revision --autogenerate"

[tool.pixi.feature.test.tasks]
test = "pytest"

[tool.pixi.dependencies]
python = "~=3.14.0"
ffmpeg = ">=8.0.1,<9"
